[project]
name = "safespace-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "grok>=6.1",
    "groq>=0.31.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.0",
    "ollama>=0.5.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "streamlit>=1.47.1",
    "streamlit-lottie>=0.0.5",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
]
